# lumix-control

./: README.md  convert_formats.py  copy_pictures.py  live_view.py  lumix_control.py  pyproject.toml  setup.py
lumix_control/: __init__.py  __main__.py  colors.py  copy.py  download.py  lumix_control.py  regex.py  size.py
lumix_control/copy/: __init__.py  regex.py  usb.py  wifi.py
