[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lumix_control"
version = "0.0.1"
authors = [
  { name="tarneo", email="tarneo@tarneo.fr" },
]
description = "Control Lumix cameras from Python (only tested on GX80)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tarneaux/lumix-control"
"Bug Tracker" = "https://github.com/tarneaux/lumix-control/issues"
